# pisad

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SAFETY_CRITICAL_SEQUENCE.md  TASK-4.6.1-COVERAGE-REPORT.md  TASK-4.6.2-SAFETY-INTEGRATION-REPORT.md  TASK-4.6.4-SAFETY-COMPLIANCE-REPORT.md  TASKS.md  TASK_INSTRUCTIONS.md  codecov.yml  consolidate_tests.py  coverage.json  debug_fft_rssi.py  debug_hysteresis.py  fix_tests.py  fix_tests_properly.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  sim_vehicle.py  simple_performance_check.py  test_brief_spike.py  test_fft_calibration.py  test_gbs_connection.py  test_hysteresis_fix.py  test_imports.py  test_quality_dashboard.json  verify_dependencies.py
.github/workflows/: ci.yml  pre-commit.yml
.trunk/: trunk.yaml
beacon_firmware/: beacon_transmitter.ino
config/: base.yaml  beacon.yaml  default.yaml  default_new.yaml  development.yaml  field_test.yaml  field_test_new.yaml  hardware-mock.yaml  hardware.yaml  logging.yaml  production.yaml  sitl.yaml  sitl_new.yaml
config/asv_integration/: analyzer_profiles.yaml  asv_global.yaml  frequency_profiles.yaml
config/parameters/: pisad_parameters.json
coverage-reports/20250815_105409/: backend-coverage.json
data/: pisad.db  test_results.db
data/field_tests/: 002c1836-937f-4d81-b4f5-75e8ae73d493_metrics.json  1c503cd0-3aaa-4530-a537-636570ed202e_metrics.json  2e49aa94-7b64-4664-95eb-a35109b5793e_metrics.json  2e7b7f3a-a08b-4c8a-8b6f-7cc18bc1aa86_metrics.json  311cec45-f66f-4484-848b-1a7bdcaa6acb_metrics.json  77549b2a-8e7f-45da-9d93-b8e7f18fa8ca_metrics.json  7a9005a8-c1cd-423d-8bc9-d76359231133_metrics.json  7e7b2fad-1fb8-4a53-b34c-18304083f45b_metrics.json  7f743dd6-fe3c-414c-8a67-96317a4b401d_metrics.json  80bab71c-e2a7-4e16-ac63-90ae8e277acc_metrics.json  834f90a8-27fc-4b71-8246-8a8b50d69659_metrics.json  8ac2d701-6141-4b6d-8bfa-7b3fa7da0f92_metrics.json  97b8ed6a-04b6-4d7a-a8ef-97df628bded9_metrics.json  a5caf4e1-ad64-4e17-bc30-657f0bf24f49_metrics.json  a9c13745-598d-4c83-bdc6-671ca2d30e1c_metrics.json  b4425524-ae7e-4a39-8d65-8868d887b826_metrics.json  b9e58b31-cf27-4730-ad7a-afb49dbc6b97_metrics.json  bc84746d-0753-4139-9e64-3da0cc501f4e_metrics.json  bfec4336-296e-43e1-91e8-9f312357ac11_metrics.json  d0351b82-526f-4235-a77d-7c0dce7922e9_metrics.json  ed470351-861f-47d6-a251-b3ddf4d1617a_metrics.json
deployment/: README.md  pisad.service
deployment/systemd/: rf-homing.service
docs/: CODECOV_SETUP.md  DEVELOPMENT.md  EPIC-5-FUNCTIONAL-REQUIREMENTS-ALIGNMENT.md  SOAPYSDR_INTEGRATION.md  Sprint_manager.md  architecture.md  async_blocking_analysis.md  homing-configuration.md  mavlink-integration.md  prd.md  safety_hazards.md  setup.md  sprint8_issues.md  test_best_practices.md  test_fixture_dependency_graph.md  test_traceability_matrix.md  tests_to_keep.md  tests_to_remove.md  traceability_matrix.md
docs/api/: README.md  sdr_service.md  signal_processing.md
docs/architecture/: api-specification.md  backend-architecture.md  checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  deployment-architecture.md  error-handling-strategy.md  external-apis.md  frontend-architecture.md  high-level-architecture.md  index.md  introduction.md  monitoring-and-observability.md  sdr-integration.md  security-and-performance.md  tech-stack.md  testing-strategy.md  unified-project-structure.md  update-story.md
docs/operator/: emergency_procedures.md  homing_workflow_procedures.md
docs/operator-guides/: mission_planner_asv_integration.md
docs/prd/: checklist-results-report.md  epic-1-foundation-core-signal-processing.md  epic-2-flight-integration-safety-systems.md  epic-3-autonomous-behaviors-field-validation.md  epic-4-technical-infrastructure-quality.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.story.md  1.1_CLEAN.md  1.1_Story.md  1.2.story.md  1.2_CLEAN.md  1.2_Story.md  1.3.story.md  1.3_CLEAN.md  1.3_Story.md  1.4.story.md  1.4_CLEAN.md  1.4_Story.md  1.5.story.md  1.5_CLEAN.md  1.5_Story.md  2.1.story.md  2.1_CLEAN.md  2.1_Story.md  2.2.story.md  2.2_CLEAN.md  2.2_Story.md  2.3.story.md  2.3_CLEAN.md  2.3_Story.md  2.4.story.md  2.4_CLEAN.md  2.4_Story.md  2.5.story.md  2.5_CLEAN.md  2.5_Story.md  3.1.story.md  3.1_CLEAN.md  3.1_Story.md  3.2.story.md  3.2_CLEAN.md  3.2_Story.md  3.3.story.md  3.3_CLEAN.md  3.3_Story.md  3.4.story.md  (+57 more)
docs/testing/: beacon_setup.md  emergency_procedures.md  field_test_report.md  ground_vehicle_test_plan.md  known_limitations.md  preflight_safety_checklist.md  test_strategy.md
scripts/: analyze_field_data.py  build-prod.sh  coverage-report.sh  field_test_logger.py  fix_async_blocking.py  fix_flaky_tests.py  generate_openapi.py  generate_test_dashboard.py  mark_serial_tests.py  migrate_config.py  refactor_all_exceptions.py  refactor_mavlink_exceptions.py  reorganize_tests.py  rollback.sh  run_all_checks.sh  run_sitl_tests.sh  run_tests.sh  safety_interlock_test_report.json  setup_serena_mcp.sh  sitl_setup.py  test_gcs_telemetry.py  test_hil_timing.py  test_safety_interlocks.py  test_sdr.py  test_search_pattern.py
scripts/field_tests/: approach_accuracy_test.py  detection_range_test.py  safety_validation_test.py  state_transition_test.py
src/backend/: main.py
src/frontend/: jest.config.cjs  jest.setup.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts
src/sdrpp_plugin/: CMakeLists.txt  pisad_bridge.cpp  pisad_bridge.h  standalone_tcp_client.cpp  test_main.cpp  test_reconnection  test_reconnection_logic.cpp  test_tcp_client.cpp
tests/: analyze_test_coverage.py  conftest.py  conftest_metrics.py  delete_non_prd_refined.sh  delete_non_prd_tests.sh  missing_prd_tests.md  refined_prd_analysis.py  smoke_test.py
tests/contract/: test_api_contracts.py
tests/e2e/: homing_activation.spec.ts  profile_management.spec.ts  (+3 more)
(+536 files in other folders)
